cmake_minimum_required(VERSION 3.12)
project(LUOGU)
set(CMAKE_CXX_STANDARD 14)
set(TESTFOLDERS problem)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++11 -O0")
foreach (FOLDER ${TESTFOLDERS})
    file(GLOB SUBFOLDERS PRIVATE ${FOLDER} ${FOLDER}/*)
    foreach(SUBFOLDER ${SUBFOLDERS})
        file(GLOB NOTES ${SUBFOLDER}/*.cpp)
        foreach(FILEPATH ${NOTES} )
            string(REGEX REPLACE ".+/(.+)\\..*" "\\1" BASENAME ${FILEPATH})
            add_executable(${BASENAME} ${FILEPATH})
        endforeach( )
    endforeach()        
endforeach( )