cmake_minimum_required(VERSION 3.12)
project("luogu")
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++11 -O0")

set(SUBFOLDER ".")
file(GLOB NOTES ${SUBFOLDER}/*.cpp)
foreach(FILEPATH ${NOTES} )
    string(REGEX REPLACE ".+/(.+)\\..*" "\\1" BASENAME ${FILEPATH})
    add_executable(${BASENAME} ${FILEPATH})
endforeach( )
